# beat-detection

./: .gitignore  Cargo.toml  README.md
src/: beat_detector.rs  main.rs  sound_processor.rs  visualizer.rs
