[package]
name = "beat-detection"
version = "0.1.0"
authors = ["Zwel Pai <lozberipie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
hound = "3.4.0"
rustfft = "4.0.0"
plotters = "0.3.0"
gnuplot = "0.0.37"